[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "resilientdb-sdk"
version = "0.0.1"
authors = [
  { name="Arindaam Roy", email="alpharoy14@gmail.com" },
]
description = "Python SDK for Resilient DB; creates and transfer UTXO like assets"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/apache/incubator-resilientdb-python-sdk"
Issues = "https://github.com/apache/incubator-resilientdb-python-sdk/issues"
